# measure-calculator

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: unit-test.yml
3pp/: CMakeLists.txt
include/calc-cpp/: data.hpp  defaults.hpp  error.hpp  lexer.hpp  parser.hpp  spec.hpp  token.hpp
include/measure-calculator/: char-classification.hpp  data.hpp  defaults.hpp  error.hpp  interpreter.hpp  lexer.hpp  measure-calculator.hpp  parser.hpp  spec.hpp  token.hpp
test/: CMakeLists.txt  manual-test-main.cpp
test/test-cases/: test-case.cpp
